refact: рефакторинг на дженерики in progress